# houston

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cli-deps.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/release-notes/: 0.4.13.md  0.4.14.md  0.4.15.md  0.4.16.md  0.4.17.md  0.4.18.es.md  0.4.18.md  0.4.18.pt.md  0.4.19.es.md  0.4.19.md  0.4.19.pt.md  README.md
.github/workflows/: docker-publish.yml  engine-release.yml  release.yml  website-deploy.yml
always-on/: Dockerfile  README.md  docker-compose.yml  houston-engine.service
app/: index.html  package.json  vite.config.ts
app/houston-tauri/: Cargo.toml
app/houston-tauri/src/: paths.rs
app/public/: compat-gate.js
app/scripts/: sentry-inject.mjs
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/assets/: dmg-background.tiff
app/src-tauri/src/: dmg_guard.rs  engine_supervisor.rs  lib.rs  logging.rs  notification.rs
app/src-tauri/src/bug_report/: format.rs  mod.rs
app/src-tauri/src/commands/: diagnostics.rs  mod.rs
app/src-tauri/src/houston_prompt/: integrations.rs
app/tests/: activity-bulk.test.ts  archived-layout.test.ts  archived-search.test.ts  auto-continue-message.test.ts  autocompact.test.ts  composio-card-state.test.ts  cross-agent-selection.test.ts  locale.test.ts  mission-board-columns.test.ts  mission-card.test.ts  mission-control-create.test.ts  mission-control-send.test.ts  mission-control-session.test.ts  mission-highlight.test.ts  mission-search.test.ts  mission-selection.test.ts  notification-nav.test.ts  platform-detection.test.ts  provider-login-url.test.ts  provider-reconnect-state.test.ts  routines-tab-model.test.ts  sentry-replay.test.ts  (+5 more)
cloud-design/: 01-the-plan.html  02-kubernetes.html  03-kata-firecracker.html  04-knative.html  05-control-plane.html  06-postgres-redis.html  07-storage.html  08-networking.html  09-auth.html  10-message-flow.html  11-roadmap.html  README.md  index.html  style.css
docs/: hackathon-agent-orchestration.md
engine-design/: 02-agent-folder.html  03-where-engine-lives.html  04-message-flow.html  05-conversations-die.html  06-four-tables.html  07-keeping-agents-apart.html  08-login.html  09-external-triggers.html  10-deployment.html  11-roadmap.html  README.md  index.html
engine/houston-agent-files/: Cargo.toml
engine/houston-agent-files/src/: executive_config.rs  lib.rs  workspace_roles.rs
engine/houston-agent-portable/: Cargo.toml
engine/houston-agents-conversations/: Cargo.toml
engine/houston-agents-conversations/src/: session_runner.rs
engine/houston-claude-installer/: Cargo.toml  build.rs
engine/houston-claude-installer/src/: lib.rs
engine/houston-cli-bundle/: Cargo.toml
engine/houston-composio/: Cargo.toml
engine/houston-composio/src/: cli.rs  commands.rs  install.rs  lifecycle.rs
engine/houston-db/: Cargo.toml
engine/houston-engine-core/: Cargo.toml
engine/houston-engine-core/src/: agents_crud.rs  conversations.rs  error.rs  lib.rs  paths.rs  skills.rs  store.rs  workspace_context.rs  worktree.rs
engine/houston-engine-core/src/agents/: activity.rs  files.rs  learnings_context.rs  mod.rs  routine_runs.rs  routines.rs  store.rs  types.rs
engine/houston-engine-core/src/attachments/: tests.rs
engine/houston-engine-core/src/provider/: login_relay.rs  mod.rs
engine/houston-engine-core/src/roles/: availability.rs  executive.rs  mod.rs  orchestrator.rs  resolver.rs  sync_session.rs
engine/houston-engine-core/src/routines/: cron_compat.rs  engine_dispatcher.rs  mod.rs  runner.rs  runs.rs  scheduler.rs  types.rs
engine/houston-engine-core/src/sessions/: compaction.rs  control.rs  file_changes.rs  history.rs  mod.rs  provider.rs  workdir_locks.rs
engine/houston-engine-core/src/store/: bundled.rs
engine/houston-engine-core/src/workspaces/: mod.rs
engine/houston-engine-protocol/: Cargo.toml
engine/houston-engine-protocol/src/: executive.rs  lib.rs  roles.rs
engine/houston-engine-server/: Cargo.toml
engine/houston-engine-server/src/: lib.rs  main.rs  state.rs
engine/houston-engine-server/src/routes/: claude.rs  composio.rs  executive.rs  isolation.rs  mod.rs  orchestration.rs  providers.rs  routines.rs  sessions.rs  workspaces.rs  worktree.rs
engine/houston-engine-server/tests/: composio.rs  conversations.rs  engine_log_capture.rs  executive.rs  http.rs  orchestration.rs  providers.rs  workspaces.rs  worktree.rs
engine/houston-events/: Cargo.toml
engine/houston-file-watcher/: Cargo.toml
engine/houston-policy/: Cargo.toml
engine/houston-policy/src/: denylist.rs  lib.rs
engine/houston-sandbox/: Cargo.toml
engine/houston-sandbox/src/: lib.rs  linux_seccomp.rs  macos_exec.rs  macos_profile.rs
engine/houston-sandbox/src/backend/: linux.rs  linux_bwrap.rs  linux_bwrap_args.rs  macos.rs  mod.rs  windows.rs
engine/houston-scheduler/: Cargo.toml
engine/houston-skills/: Cargo.toml
engine/houston-terminal-manager/: Cargo.toml
engine/houston-terminal-manager/src/: claude_runner.rs  cli_process.rs  codex_command.rs  codex_parser.rs  codex_rollout.rs  codex_runner.rs  credential_staging.rs  gemini_parser_state.rs  gemini_runner.rs  lib.rs  manager.rs  parser.rs  provider_auth.rs  sandbox_cli_paths.rs  session_dispatch.rs  session_io.rs  session_pump.rs  session_sandbox.rs  session_update.rs  types.rs
engine/houston-terminal-manager/src/provider/: anthropic.rs  anthropic_classify.rs  mod.rs  openai.rs  resolve.rs
engine/houston-tunnel/: Cargo.toml
engine/houston-ui-events/: Cargo.toml
engine/houston-ui-events/src/: lib.rs
growth/: utm-conventions.md
knowledge-base/: agent-manifest.md  architecture.md  auth.md  cli-bundling.md  data-rituals.md  engine-protocol.md  engine-server.md  files-first.md  i18n.md  platform-matrix.md  production-infra.md  provider-errors.md  windows-testing.md
scripts/: build-dmg-local.sh  bump-cli.sh  event-qr.sh  rename-dmg-volume.sh  version.sh
store/: catalog.json
website/: eleventy.config.js
(+287 files in other folders)
