[package]
name = "houston-tauri"
version = "0.4.15"
edition = "2021"
description = "Thin Tauri adapter for the Houston desktop app. Owns the event-sink bridge, tray UI, path helpers, and shared state. All domain logic lives in the engine crates."
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
houston-terminal-manager = { workspace = true }
houston-db = { workspace = true }
houston-events = { workspace = true }
houston-scheduler = { workspace = true }
houston-agent-files = { workspace = true }
houston-ui-events = { workspace = true }
houston-agents-conversations = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tracing = { workspace = true }
