[package]
name = "houston-agent-files"
version = "0.4.19"
edition = "2021"
description = "Generic read/write access to agent files under .houston/<type>/<type>.json with JSON Schema co-location"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
houston-engine-protocol = { workspace = true }

[dev-dependencies]
tempfile = "3"
