[package]
name = "houston-agents-conversations"
version = "0.4.15"
edition = "2021"
description = "Orchestrates multi-session conversation lifecycle for Houston agents — spawn, monitor, persist, supervise"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
houston-terminal-manager = { workspace = true }
houston-db = { workspace = true }
houston-ui-events = { workspace = true }

[dev-dependencies]
tempfile = "3"
