[package]
name = "houston-composio"
version = "0.4.15"
edition = "2021"
description = "Composio integration — CLI install/lifecycle, OAuth, app catalog (transport-neutral)"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
houston-ui-events = { workspace = true }
houston-db = { workspace = true }
houston-cli-bundle = { workspace = true }
# Cross-platform home-directory resolution (used by install.rs to locate
# `~/.composio/composio[.exe]` on macOS/Linux and `%USERPROFILE%\.composio\…`
# on Windows).
dirs = "5"
