[package]
name = "houston-engine-core"
version = "0.4.19"
edition = "2021"
description = "Runtime container for Houston Engine — owns DB, event sinks, paths, and domain logic shared by HTTP routes and CLI tools"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = "1"
houston-db = { workspace = true }
houston-terminal-manager = { workspace = true }
houston-ui-events = { workspace = true }
houston-agent-files = { workspace = true }
houston-agent-portable = { workspace = true }
houston-skills = { workspace = true, features = ["remote"] }
houston-engine-protocol = { workspace = true }
houston-policy = { workspace = true }
houston-sandbox = { workspace = true }
houston-agents-conversations = { workspace = true }
houston-cli-bundle = { workspace = true }
houston-claude-installer = { workspace = true }
dirs-next = "2"
dirs = "5"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = { workspace = true }
cron = "0.12"
chrono-tz = "0.9"
# Gemini OAuth flow — PKCE (rand + sha2) + redirect URI query encoding (base64 for the
# verifier challenge). All three already in use elsewhere in the workspace; we just
# need them here so the OAuth module is self-contained.
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
# Native 7z decoder used to extract the bundled PortableGit archive
# on first launch (see src/git_bash.rs). Replaces an earlier SFX
# subprocess that popped its own progress dialog and blocked engine
# boot.
sevenz-rust2 = "0.18"

[dev-dependencies]
tempfile = "3"
