[package]
name = "houston-engine-protocol"
version = "0.4.15"
edition = "2021"
description = "Wire types for Houston Engine — REST DTOs, WS envelope, error codes, version const"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
houston-ui-events = { workspace = true }
houston-terminal-manager = { workspace = true }
