[package]
name = "houston-engine-server"
version = "0.4.19"
edition = "2021"
description = "Houston Engine HTTP+WS server — axum binary speaking the Houston wire protocol"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[[bin]]
name = "houston-engine"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Crash reporting. Init is gated on a runtime SENTRY_DSN env var (see
# main.rs::init_sentry) so the open-source engine ships Sentry-capable but
# DORMANT — the Houston desktop app injects its DSN at spawn, any other
# operator sets their own, and an empty DSN is a silent no-op. rustls (not
# native-tls) keeps the musl/Linux engine builds free of an OpenSSL dep.
sentry = { version = "0.42", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls"] }
# tracing::error! -> Sentry event, tracing::warn!/info! -> breadcrumb. No-op
# until sentry::init has run, so safe to register unconditionally.
sentry-tracing = "0.42"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
futures-util = "0.3"
houston-engine-protocol = { version = "0.4.0", path = "../houston-engine-protocol" }
houston-engine-core = { version = "0.4.0", path = "../houston-engine-core" }
houston-agent-files = { workspace = true }
houston-composio = { workspace = true }
houston-claude-installer = { workspace = true }
houston-cli-bundle = { workspace = true }
houston-tunnel = { workspace = true }
houston-db = { workspace = true }
async-trait = { workspace = true }
houston-skills = { workspace = true, features = ["remote"] }
houston-ui-events = { workspace = true }
houston-terminal-manager = { workspace = true }
houston-sandbox = { workspace = true }
houston-file-watcher = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
tempfile = "3"
urlencoding = "2"
base64 = "0.22"
houston-agent-portable = { workspace = true }
