[package]
name = "houston-events"
version = "0.4.14"
edition = "2021"
description = "Core event system for AI agent desktop apps — unified input queue"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
