[package]
name = "houston-policy"
version = "0.4.19"
edition = "2021"
description = "Session isolation policy: defines what filesystem paths and network access each agent subprocess is allowed."
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
dirs = "5"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
