[package]
name = "houston-sandbox"
version = "0.4.19"
edition = "2021"
description = "OS-level process isolation for Houston agent CLI subprocesses. Linux: closefds + Landlock LSM. macOS/Windows: stubs pending full backend."
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
houston-policy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dirs = "5"

# Unix: close inherited file descriptors before exec via /proc/self/fd (Linux)
# or /dev/fd (macOS).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux: Landlock LSM for filesystem-path access control.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.4"

[dev-dependencies]
tempfile = "3"

# macOS Seatbelt profile application in pre_exec (libc from unix target).
