[package]
name = "houston-sandbox"
version = "0.4.19"
edition = "2021"
description = "OS-level process isolation for Houston agent CLI subprocesses."
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
houston-policy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dirs = "5"

# Unix: close inherited file descriptors before exec via /proc/self/fd (Linux)
# or /dev/fd (macOS).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux: Landlock LSM for filesystem-path access control.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
