[package]
name = "houston-skills"
version = "0.4.15"
edition = "2021"
description = "Hermes-style self-improving skills for AI agents"
license = "MIT"

[features]
default = []
remote = ["reqwest", "tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["sync", "time"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
