[package]
name = "houston-terminal-manager"
version = "0.4.14"
edition = "2021"
description = "Terminal/CLI subprocess manager for Claude, Codex, and other CLI-based AI agents"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# Cross-platform home-directory resolution (HOME on Unix, USERPROFILE on
# Windows). Used by `claude_path` to expand `~/...` entries in the common
# install-dir list.
dirs = "5"
# Bundled-CLI resolver (codex, composio) for the Houston `.app`. Lets
# `claude_path` prepend the bundled-bin directories to the resolved PATH
# so subprocess spawns of `claude`/`codex`/`composio` find them without
# any user-side shell config.
houston-cli-bundle = { workspace = true }

[dev-dependencies]
# Used by the Gemini adapter tests to build throwaway
# `~/.gemini/{settings,google_accounts}.json` fixtures without touching
# the developer's real home directory.
tempfile = "3"
