[package]
name = "houston-tunnel"
version = "0.4.15"
edition = "2021"
description = "Outbound reverse tunnel client — engine dials Houston relay, multiplexes mobile HTTP+WS"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["connect", "rustls-tls-webpki-roots"], default-features = false }
tracing = { workspace = true }
uuid = { workspace = true }

[dependencies.thiserror]
version = "1"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
