[package]
name = "houston-ui-events"
version = "0.4.15"
edition = "2021"
description = "Event types emitted from Houston backend to the UI via Tauri's event bus"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
houston-terminal-manager = { workspace = true }
